** (2013-08-17) Sven Vermeulen
	- Some CVEs mention CPEs without version

** (2013-08-15) Sven Vermeulen
	- Further improve error handling
	- Update default location for versions.dat to github URL
	- Remove versions.dat with a pullcves cleancache
	- Feed tb_cpe_versions table if it is not "full"
	- Allow binlist to be stdin if "-" is provided

** (2013-08-14) Sven Vermeulen
	- Exit gracefully in pullcves

** (2013-08-14) Anne Mulhern <e-mail redacted>
	- Handle cvechecker return codes in pullcves
	- Properly bail out if CPE data is not correctly formatted

** (2013-08-11) Anne Mulhern <e-mail redacted>
	- Fix zero cpeids in tb_binmatch table
	- Improve return code handling in sqlite code

** (2013-08-11) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Check on CPE field sizes to prevent potential overflows
	- Check on CVE field sizes before loading into database
	- Use LARGEFIELDSIZE for contentmatch column (tb_versionmatch) and
	  C-type variables related to the content match
	- Introduce database fixing for MySQL
	- Remove unused variables

** (2013-07-08) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Handle cve data file open failures correctly
	- Bail out when SQL instruction in SQLite fails

** (2013-02-04) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add fix for cpe:language when additional ':' was provided (Thanks to
	  Arnaud Fileux)

** (2012-11-25) Release 3.2

** (2012-11-25) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Fix declarations for dummy database handlers wrt cvss scoring

** (2012-05-13) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Use memset in zero_string
	- Clean up buffers before reusing (suggestion by Francesco Colista)

** (2012-04-20) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add check on xsltproc (reported by Scott Garman)

** (2012-01-22) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add CVSS scoring information to the report

** (2011-07-21) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update buffer size checks
